syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = "proto/user;userpb";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message User {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message DeleteUserResponse {
    User user = 1;
}

message AuthenticateRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateResponse {
    User user = 1;
    string token = 2;
}
